--- a/up1app/src/pages/code/code.html
+++ b/up1app/src/pages/code/code.html
@@ -7,5 +7,16 @@
 </ion-header>
 
 <ion-content padding>
-
+     <ion-list>
+  <ion-item>
+<!--
+    <ion-avatar item-left>
+      <img src="img/avatar-finn.png">
+    </ion-avatar>
+-->
+    <h2>#CODE-1</h2>
+    <h3>WIN BABY WIN</h3>
+    <p>win the moment! winning is living!</p>
+  </ion-item>
+</ion-list>
 </ion-content>
