comments and like buttons style

--- a/up1app/src/pages/home/home.html
+++ b/up1app/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
      <ion-navbar>
-          <ion-title>UP-1-APP</ion-title>
+          <ion-title>UP-1-APP test</ion-title>
      </ion-navbar>
 </ion-header>
 
