--- a/up1app/src/pages/code/code.html
+++ b/up1app/src/pages/code/code.html
@@ -18,5 +18,71 @@
     <h3>WIN BABY WIN</h3>
     <p>win the moment! winning is living!</p>
   </ion-item>
+  
+    <ion-item>
+<!--
+    <ion-avatar item-left>
+      <img src="img/avatar-finn.png">
+    </ion-avatar>
+-->
+    <h2>#CODE-2</h2>
+    <h3>WIN BABY WIN</h3>
+    <p>win the moment! winning is living!</p>
+  </ion-item>
+  
+    <ion-item>
+<!--
+    <ion-avatar item-left>
+      <img src="img/avatar-finn.png">
+    </ion-avatar>
+-->
+    <h2>#CODE-3</h2>
+    <h3>WIN BABY WIN</h3>
+    <p>win the moment! winning is living!</p>
+  </ion-item>
+  
+    <ion-item>
+<!--
+    <ion-avatar item-left>
+      <img src="img/avatar-finn.png">
+    </ion-avatar>
+-->
+    <h2>#CODE-4</h2>
+    <h3>WIN BABY WIN</h3>
+    <p>win the moment! winning is living!</p>
+  </ion-item>
+  
+    <ion-item>
+<!--
+    <ion-avatar item-left>
+      <img src="img/avatar-finn.png">
+    </ion-avatar>
+-->
+    <h2>#CODE-5</h2>
+    <h3>WIN BABY WIN</h3>
+    <p>win the moment! winning is living!</p>
+  </ion-item>
+  
+    <ion-item>
+<!--
+    <ion-avatar item-left>
+      <img src="img/avatar-finn.png">
+    </ion-avatar>
+-->
+    <h2>#CODE-6</h2>
+    <h3>WIN BABY WIN</h3>
+    <p>win the moment! winning is living!</p>
+  </ion-item>
+  
+    <ion-item>
+<!--
+    <ion-avatar item-left>
+      <img src="img/avatar-finn.png">
+    </ion-avatar>
+-->
+    <h2>#CODE-7</h2>
+    <h3>WIN BABY WIN</h3>
+    <p>win the moment! winning is living!</p>
+  </ion-item>
 </ion-list>
 </ion-content>
